<resources>
    <string name="app_name">Aplikasi</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="gpa">GPA</string>
    <string name="app_logo">app_logo</string>
    <string name="title_activity_mahasiswa">MahasiswaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="tambah_dosen">Tambah Dosen</string>
    <string name="tambah">Tambah</string>
    <string name="matkul">Matkul</string>
    <string name="umur">Umur</string>
    <string name="nama">Nama</string>
    <string name="nip">NIP</string>
</resources>